--- a/package.json
+++ b/package.json
@@ -4,7 +4,6 @@
     "@salutejs/plasma-tokens-web": "^1.23.0",
     "@salutejs/plasma-web": "^1.162.0",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "styled-components": "^5.3.6"
+    "react-dom": "^18.2.0"
   }
 }
